--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@ https://developer.mozilla.org/en-US/docs/Web/HTML/Element/img#attr-height -->
     <h2>I am a web-developer</h2>
 <hr/>
 <h3><a href="./public/movie-ranking.html">Movie ranking project</a></h3>
-<img src="./assets/images/movie-ranking.png/" height="200"/>
+<img src="./assets/images/movie-ranking.png/" height="200" width="200"/>
 <h3><a href="./public/birthday-invite.html">Birthday invitation project</a> </h3>  
-<img src="./assets/images/birthday-invite.png/" height="200"/>
+<img src="./assets/images/birthday-invite.png/" height="200" width="200"/>
 
 <hr/>
 <a href="./public/about.html">About me</a>  <a href="./public/contact.html">contact me</a>
